syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";

package modelserver;

message Session{
    string message = 1;
    string sessionId = 2;
}

message Response{
    Session session = 1;
    string modelServerTimestamp = 2;
    string modelServerDuration = 3;
}

message Empty {

}

service ModelServer{
rpc DummyComputation(Session) returns (Response) {}
rpc Register(Session) returns (Response) {}
rpc KillActor(Session) returns (Empty) {}
}
